# duckdb_read_iggy

./: Cargo.toml  Makefile  README.md
src/: lib.rs
test/sql/: read_iggy.test
