[package]
name = "read_iggy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "read_iggy"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
# Use vtab but disable default CLI features to avoid comfy-table v7.1
duckdb = { version = "1.1", default-features = false, features = ["vtab", "loadable-extension"] }

# Iggy client - version 0.7.0 locked for stability
iggy = "0.7.0"

tokio = { version = "1", features = ["full"] }
once_cell = "1.18"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
